# CourseWork

./: CMakeLists.txt  main.cpp  strings.txt
classes/: application.cpp  base.cpp  file_reader.cpp  game.cpp  screen.cpp
headers/: application.h  base.h  file_reader.h  game.h  screen.h
